Ordered Lists added

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
         <section id="About">
             <h2>About</h2>
     
-            <p>Hello! My name is Hector Ayala! I am a 3rd year Computer Science student at Barry University!
-                This Fall 2025 is my first semester and I am super excited!
-            </p>
+            <p>Hello! My name is Hector Ayala! I am a 3rd year Computer Science student at Barry University!</p>
+            <p>This Fall 2025 is my first semester and I am super excited!</p>
         </section>
 
         <section id="Experience">
@@ -31,12 +30,11 @@
 
         <section id="Connect">
             <h2>Connect</h2>
-            <u1>
+            <ol>
                 <li><img src="https://images.seeklogo.com/logo-png/30/2/github-logo-png_seeklogo-304612.png" alt="LinkedIn Logo" height="15"> GitHub: @hjayala</li>
                 <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/960px-LinkedIn_logo_initials.png" alt="LinkedIn Logo" height="15"> LinkedIn: @hjayala</li>
                 <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/960px-Instagram_logo_2022.svg.png" alt="Instagram Logo" height="15"> Instagram: @hjayala</li>
-                
-            </u1>
+            </ol>
         </section>
 
         <section id="HectorPicture">
