--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Hector Ayala's Portfolio</title>
         <meta name="author" content="Hector Ayala">
-        <meta name="viewport" content="width=device-wdith, initial-scale=1.0"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link href="css/index.css" rel="stylesheet">
     </head>
 
@@ -22,7 +22,7 @@
         <h1 id="nameFormat">Hector Ayala</h1>
 
         <section class="pictureAlignment">
-            <img class="hectorPicture" src="media/hjaPhoto.jpg"  alt="Hector Ayala in business attire" height="300">
+            <img class="hectorPicture" src="media/hjaPhoto.jpg"  alt="Hector Ayala in business attire">
         </section>
 
         <section id="About">
