js added, created footer and skills

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="author" content="Hector Ayala">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link href="css/index.css" rel="stylesheet">
+        <script src="js/index.js" defer></script>
     </head>
 
     <!-- For comments use [CTRL + /] -->
@@ -73,12 +74,12 @@
 
         <section id="Skills">
             <h2>Skills</h2>
+            <ul></ul>
         </section>
 
         <section id="Projects">
             <h2>Projects</h2>
             <ul class="projectsList">
-                <!-- <li></li> -->
             </ul>
         </section>
 
@@ -101,6 +102,6 @@
 
             </div> <!-- / ConnectContainer -->
 
-        </section>"
+        </section>
     </body>
 </html>
